fix truncation of long sub-category names in hover tooltip

--- a/src/app/modules/category/views/subcategories/subcategory-details-overlay/subcategory-details-overlay.component.scss
+++ b/src/app/modules/category/views/subcategories/subcategory-details-overlay/subcategory-details-overlay.component.scss
@@ -8,13 +8,17 @@
     flex-direction: column;
   }
   .kName {
-    width: 100%;
     height: 54px;
     border-bottom: 1px solid $kGrayscale4;
     font-weight: bold;
     padding-left: 16px;
     span {
+      width: 250px;
       line-height: 56px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      display: inline-block;
     }
   }
   .kDetails{
